--- a/task8/src/components/index.css
+++ b/task8/src/components/index.css
@@ -1,34 +1,94 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f7f7f7;
-    margin: 0;
-  }
-  
-  .dice-container {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .dice {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: #f0f0f0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    font-size: 2rem;
-    border: 1px solid #333;
-    transition: transform 0.2s ease;
-  }
-  
-  .dice:hover {
-    transform: scale(1.1);
-  }
-  
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f7f7f7;
+  margin: 0;
+}
+
+.dice-container {
+  display: flex;
+  gap: 20px;
+}
+
+.dice {
+  width: 120px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid #333;
+  transition: transform 0.2s ease;
+}
+
+.dice:hover {
+  transform: scale(1.1);
+}
+
+.face {
+  width: 80px;
+  height: 80px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 5px;
+   margin:30px 30px 30px 30px;
+}
+
+.dot {
+  width: 18px;
+  height: 18px;
+  background-color: black;
+  border-radius: 50%;
+  margin: auto;
+  display: none;
+}
+
+.face-1 .dot:nth-child(5) {
+  display: block;
+ margin:30px 30px 30px 30px;
+ 
+}
+
+.face-2 .dot:nth-child(1),
+.face-2 .dot:nth-child(9) {
+  display: block;
+ 
+}
+
+.face-3 .dot:nth-child(1),
+.face-3 .dot:nth-child(5),
+.face-3 .dot:nth-child(9) {
+  display: block;
+}
+
+.face-4 .dot:nth-child(1),
+.face-4 .dot:nth-child(3),
+.face-4 .dot:nth-child(7),
+.face-4 .dot:nth-child(9) {
+  display: block;
+}
+
+.face-5 .dot:nth-child(1),
+.face-5 .dot:nth-child(3),
+.face-5 .dot:nth-child(5),
+.face-5 .dot:nth-child(7),
+.face-5 .dot:nth-child(9) {
+  display: block;
+}
+
+.face-6 .dot:nth-child(1),
+.face-6 .dot:nth-child(3),
+.face-6 .dot:nth-child(4),
+.face-6 .dot:nth-child(6),
+.face-6 .dot:nth-child(7),
+.face-6 .dot:nth-child(9) {
+  display: block;
+}
